--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -7,7 +7,7 @@
         xmlns:viewmodels="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels"
         d:DataContext="{d:DesignInstance Type=viewmodels:PasswordGeneratorViewModel}"
         mc:Ignorable="d"
-        Title="{Binding AppTitle}"
+        Title="{Binding Title}"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
         Height="215" Width="500">
