--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views"
         mc:Ignorable="d"
-        Title="{Binding Title}"
-        ResizeMode="CanMinimize"
+        WindowState="Maximized"
         WindowStartupLocation="CenterScreen">
     <StackPanel>
         <Menu>
@@ -66,7 +65,6 @@
         </GroupBox>
         <StackPanel Orientation="Horizontal">
             <ListBoxItem/>
-            <Controls:ServiceView />
         </StackPanel>
     </StackPanel>
 </Window>
