--- a/GUI/Views/Controls/PasswordItem.xaml
+++ b/GUI/Views/Controls/PasswordItem.xaml
@@ -15,23 +15,19 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Label Margin="5"
-               Grid.Column="0"
+        <Label Grid.Column="0"
                VerticalContentAlignment="Center"
                Content="{Binding Index}"/>
         <local:VisiblePasswordBox x:Name="_password_VPB"
                                   Margin="5"
                                   Grid.Column="1"/>
-        <Button Margin="5"
-                Grid.Column="2"
+        <Button Grid.Column="2"
                 Content="🠉"
                 Click="_upButton_Click"/>
-        <Button Margin="5"
-                Grid.Column="3"
+        <Button Grid.Column="3"
                 Content="🠋"
                 Click="_downButton_Click"/>
-        <Button Margin="5"
-                Grid.Column="4"
+        <Button Grid.Column="4"
                 Content="✕"
                 Click="_deleteButton_Click"/>
     </Grid>
