--- a/GUI/Views/Controls/PasswordsContainer.xaml
+++ b/GUI/Views/Controls/PasswordsContainer.xaml
@@ -18,8 +18,7 @@
                 <StackPanel Grid.Row="0"
                             Name="_stackPanel">
                 </StackPanel>
-                <Button Margin="5"
-                        Grid.Row="1"
+                <Button Grid.Row="1"
                         Content="+"
                         Click="_addButton_Click"/>
             </Grid>
