--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -10,7 +10,7 @@
         Title="{Binding Title}"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
-        Height="215" Width="500">
+        Height="225" Width="500">
     <Grid>
         <DockPanel>
             <Menu DockPanel.Dock="Top">
@@ -34,12 +34,12 @@
                           HorizontalAlignment="Right">
                     <MenuItem.Header>
                         <StackPanel Orientation="Horizontal">
-                            <CheckBox Margin="5"
-                                      VerticalContentAlignment="Center"
+                            <CheckBox VerticalContentAlignment="Center"
                                       IsChecked="{Binding CheckIfLeaked}">
                                 Check if leaked
                             </CheckBox>
                             <Label Grid.Column="0"
+                                   Margin="0"
                                    VerticalContentAlignment="Center">
                                 Length :
                             </Label>
@@ -57,34 +57,30 @@
                 </MenuItem>
             </Menu>
             <StackPanel>
-                <TextBox Margin="5"
-                         VerticalAlignment="Top"
+                <TextBox VerticalAlignment="Top"
                          VerticalContentAlignment="Center"
                          FontFamily="Courier New"
                          FontSize="20"
                          Text="{Binding GeneratedPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Margin="5"
-                              VerticalContentAlignment="Center"
+                    <CheckBox VerticalContentAlignment="Center"
                               IsChecked="{Binding IncludeNumerics}">
                         Numerics
                     </CheckBox>
-                    <CheckBox Margin="5" VerticalContentAlignment="Center"
+                    <CheckBox VerticalContentAlignment="Center"
                         IsChecked="{Binding IncludeUpperCaseAlphabet}">
                         Upper case Alphabet
                     </CheckBox>
-                    <CheckBox Margin="5" VerticalContentAlignment="Center"
+                    <CheckBox VerticalContentAlignment="Center"
                               IsChecked="{Binding IncludeLowerCaseAlphabet}">
                         Lower case Alphabet
                     </CheckBox>
-                    <CheckBox Margin="5"
-                              VerticalContentAlignment="Center"
+                    <CheckBox VerticalContentAlignment="Center"
                               IsChecked="{Binding IncludeSpecialCharacters}">
                         Special Characters
                     </CheckBox>
                 </StackPanel>
-                <TextBox Margin="5"
-                         Height="65"
+                <TextBox Height="65"
                          AcceptsReturn="True"
                          TextWrapping="Wrap"
                          FontFamily="Courier New"
