Moving some properties into the theme file

--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -34,19 +34,15 @@
                           HorizontalAlignment="Right">
                     <MenuItem.Header>
                         <StackPanel Orientation="Horizontal">
-                            <CheckBox VerticalContentAlignment="Center"
-                                      IsChecked="{Binding CheckIfLeaked}">
+                            <CheckBox IsChecked="{Binding CheckIfLeaked}">
                                 Check if leaked
                             </CheckBox>
                             <Label Grid.Column="0"
-                                   Margin="0"
-                                   VerticalContentAlignment="Center">
+                                   Margin="0">
                                 Length :
                             </Label>
                             <TextBox Grid.Column="1"
                                      Width="60"
-                                     VerticalAlignment="Center"
-                                     VerticalContentAlignment="Center"
                                      TextAlignment="Center"
                                      Text="{Binding PasswordLength, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                      TextChanged="_length_TextBox_TextChanged"
@@ -57,26 +53,20 @@
                 </MenuItem>
             </Menu>
             <StackPanel>
-                <TextBox VerticalAlignment="Top"
-                         VerticalContentAlignment="Center"
-                         FontFamily="Courier New"
+                <TextBox FontFamily="Courier New"
                          FontSize="20"
                          Text="{Binding GeneratedPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox VerticalContentAlignment="Center"
-                              IsChecked="{Binding IncludeNumerics}">
+                    <CheckBox IsChecked="{Binding IncludeNumerics}">
                         Numerics
                     </CheckBox>
-                    <CheckBox VerticalContentAlignment="Center"
-                        IsChecked="{Binding IncludeUpperCaseAlphabet}">
+                    <CheckBox IsChecked="{Binding IncludeUpperCaseAlphabet}">
                         Upper case Alphabet
                     </CheckBox>
-                    <CheckBox VerticalContentAlignment="Center"
-                              IsChecked="{Binding IncludeLowerCaseAlphabet}">
+                    <CheckBox IsChecked="{Binding IncludeLowerCaseAlphabet}">
                         Lower case Alphabet
                     </CheckBox>
-                    <CheckBox VerticalContentAlignment="Center"
-                              IsChecked="{Binding IncludeSpecialCharacters}">
+                    <CheckBox IsChecked="{Binding IncludeSpecialCharacters}">
                         Special Characters
                     </CheckBox>
                 </StackPanel>
