--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -69,7 +69,8 @@
             <ListBox Grid.Row="0"
                      Grid.Column="0"
                      Name="_services_LB"
-                     ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+                     ScrollViewer.VerticalScrollBarVisibility="Auto"
+                     SelectionChanged="_services_LB_SelectionChanged"/>
 
             <Button Grid.Row="1"
                     Grid.Column="0"
