--- a/GUI/Views/Controls/PasswordsContainer.xaml
+++ b/GUI/Views/Controls/PasswordsContainer.xaml
@@ -7,8 +7,7 @@
              mc:Ignorable="d"
              Height="365">
     <GroupBox Header="Passwords">
-        <ScrollViewer
-                      VerticalScrollBarVisibility="Auto"
+        <ScrollViewer VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Disabled">
             <Grid>
                 <Grid.RowDefinitions>
