--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -63,7 +63,8 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <ListBox Grid.Row="0"
@@ -71,10 +72,14 @@
                      Name="_services_LB"
                      ScrollViewer.VerticalScrollBarVisibility="Auto"
                      SelectionChanged="_services_LB_SelectionChanged"/>
-
             <Button Grid.Row="1"
                     Grid.Column="0"
                     Content="+"/>
+            
+            <Controls:ServiceView x:Name="_service"
+                                  Grid.Row="0"
+                                  Grid.RowSpan="2"
+                                  Grid.Column="1"/>
         </Grid>
     </Grid>
 </Window>
