Changing Background color on field changed

--- a/GUI/Views/Controls/ServiceView.xaml
+++ b/GUI/Views/Controls/ServiceView.xaml
@@ -23,19 +23,22 @@
                    Content="Service name : "/>
             <TextBox Grid.Row="0"
                      Grid.Column="1"
-                     Text="{Binding ServiceName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                     Text="{Binding ServiceName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                     Background="{Binding ServiceNameBackground}"/>
             <Label Grid.Row="1"
                    Grid.Column="0"
                    Content="Url : "/>
             <TextBox Grid.Row="1"
                      Grid.Column="1"
-                     Text="{Binding Url, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                     Text="{Binding Url, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                     Background="{Binding UrlBackground}"/>
             <Label Grid.Row="2"
                    Grid.Column="0"
                    Content="Notes : "/>
             <TextBox Grid.Row="2"
                      Grid.Column="1"
                      Text="{Binding Notes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                     Background="{Binding NotesBackground}"
                      AcceptsReturn="True"
                      AcceptsTab="True"/>
         </Grid>
